# chatgpt-automate

./: .gitignore  AGENTS.md  __main__.py  call_function.py  codex_device.py  exceptions.py  login.py  models.py  oauth.py  oauth_codex.py  pyproject.toml  register.py  relay-openapi.yaml  sentinel_pow.py
manager/backend/: pyproject.toml
manager/backend/app/: db.py  extensions.py  main.py  models.py  outlook_otp.py  subscription.py  xray_manager.py
manager/backend/extensions/relay_codex/: __init__.py  manifest.json  ui.json
manager/frontend/: index.html  package.json
manager/frontend/src/: App.tsx
manager/frontend/src/api/: client.ts
manager/frontend/src/components/: ErrorReport.tsx  Layout.tsx  LoginGate.tsx  MailViewerModal.tsx  OTPModal.tsx  Setup2FAGate.tsx
manager/frontend/src/context/: AuthContext.tsx
manager/frontend/src/pages/: AccountDetailPage.tsx  AccountsPage.tsx  BulkRegisterWorkflow.tsx  CdkActivateWorkflow.tsx  CodexDeviceWorkflow.tsx  CodexWorkflow.tsx  ExtensionAppPage.tsx  ExtensionsPage.tsx  LoginWorkflow.tsx  MailboxesPage.tsx  ProfilePage.tsx  PromoCheckoutWorkflow.tsx  ProxiesPage.tsx  RegisterWorkflow.tsx  SettingsPage.tsx  SharedAccountPage.tsx  SubscriptionsPage.tsx  UsersPage.tsx  WorkflowRunDetailPage.tsx  WorkflowRunsPage.tsx  WorkflowsPage.tsx
